--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ ul{
 }
 
 .boxes{
+    display: flex;
     background-color: rgba(218, 196, 196, 0.998);
     background-size: cover;
     flex-shrink: 0;
@@ -52,10 +53,12 @@ ul{
 
 }
 #box2{
+    display: flex;
     width: 100%;
     flex-grow:2;
     flex-shrink:5;
     height: 100%;
+    padding: 20px;
     
 }
 
@@ -107,14 +110,14 @@ h1{
         flex-basis: 100%;
     }
     #box1{
-        height: 80px;
+        height: 100%;
         flex-basis: 0px;
         flex-direction: column;
         margin: 0px 0px 5px 0px;
     }
     .flex-container .main-menu{
         flex-direction: column;
-        flex-basis: 100px;
+        flex-basis: 100%;
         height: 100px;
         margin: 0
     }
@@ -138,19 +141,10 @@ h1{
     #mobile{
         display: table;
     }
-    .box2{
-        flex-basis: 100%;
+    #box2{
+        width:auto;
     }
  
 }
 
-@media(max-width: 390px){
-    #pc{
-        display: none;
-    }
-    #mobile{
-        display: table;
-    }
 
-
-}
